# crupier

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.site  LICENSE  MANIFEST.in  README.md  SECURITY.md  crupier.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: crupier-api-design.md  crupier-architecture.md  crupier-drop-in-adoption.md  crupier-product-discovery.md  crupier-programmer-guide.md  crupier-publishing.md  crupier-real-probes-2026-06-18.md  crupier-real-smoke-2026-06-18.md  crupier-roadmap.md
examples/: _example_support.py  agentic_pr_review.py  customer_support_triage.py  drop_in_agent_boundary.py  live_operations_validation.py  live_routing_validation.py  model-compare-eval.json  multimodal_claim_review.py  routing-eval.json  sdk_dry_run.py  workflow_operations_hub.py
site/: app.js  index.html  nginx.conf  robots.txt  sitemap.xml  social-card.html  styles.css  validate.py
src/crupier/: __init__.py  __main__.py  autopatch.py  budgets.py  capabilities.py  cli.py  client.py  config.py  costs.py  default_cards.py  errors.py  evals.py  executor.py  feedback.py  learning.py  model_profiles.py  models.py  multimodal.py  operations.py  orchestrator.py  planner.py  policy.py  probes.py  project_audit.py  prompts.py  registry.py  release.py  route_schema.py  runtime_policy.py  selector.py  server.py  structured.py  tools.py  trace_store.py
src/crupier/adapters/: __init__.py  anthropic.py  base.py  common.py  factory.py  google.py  nan.py  ollama.py  openai.py  openai_compatible.py  openrouter.py
src/crupier/compat/: __init__.py  openai.py
tests/: test_adapter_common.py  test_capability_probes.py  test_cli_edges.py  test_config.py  test_config_edges.py  test_configurable_adapter_edges.py  test_examples.py  test_executor_edges.py  test_google_ollama_edges.py  test_human_feedback.py  test_models.py  test_multimodal_routing.py  test_multimodal_unit.py  test_native_provider_probes.py  test_openai_compat.py  test_openai_compatible_adapter.py  test_openai_compatible_server.py  test_operations.py  test_operations_edges.py  test_orchestrator_edges.py  test_policy_and_planning.py  test_project_audit.py  test_project_audit_edges.py  test_provider_adapter_edges.py  test_provider_adapters.py  test_real_executor_with_fakes.py  test_registry_and_cli.py  test_registry_edges.py  test_release.py  test_release_edges.py  test_route_schema_and_evals.py  test_route_schema_edges.py  test_runtime_policy.py  test_selector.py  test_server_edges.py  test_structured.py  test_tools.py  test_trace_store.py
